<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/tollbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                app:startIconDrawable="@drawable/ic_perso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_name"
                    style="@style/text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="horizontal">

            <TextView
                style="@style/text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_weight="30"
                android:drawableStart="@drawable/ic_sexe"
                android:drawableTint="@color/colorButton"
                android:text="@string/sexe"
                tools:targetApi="m" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_men"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:checked="true"
                android:padding="@dimen/margin_10"
                android:text="@string/homme"
                android:textColor="@color/colorButton"
                app:buttonTint="@color/colorButton" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio_women"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:padding="@dimen/margin_10"
                android:text="@string/femme"
                android:textColor="@color/colorButton"
                app:buttonTint="@color/colorButton" />

        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_finissez_vos_comp_tences" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="@string/courage" />

                        <TextView
                            android:id="@+id/edit_courage"
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            tools:text="50" />

                        <ImageButton
                            android:id="@+id/de_courage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:contentDescription="@string/de_rouge"
                            android:focusable="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/de_6" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="@string/charisme" />

                        <TextView
                            android:id="@+id/edit_charisme"
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            tools:text="12" />

                        <ImageButton
                            android:id="@+id/de_charisme"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:contentDescription="@string/de_rouge"
                            android:focusable="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/de_6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="@string/force" />

                        <TextView
                            android:id="@+id/edit_force"
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            tools:text="12" />

                        <ImageButton
                            android:id="@+id/de_force"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:contentDescription="@string/de_rouge"
                            android:focusable="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/de_6" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"
                            android:text="@string/intelligence" />

                        <TextView
                            android:id="@+id/edit_intel"
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            tools:text="12" />

                        <ImageButton
                            android:id="@+id/de_intel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:contentDescription="@string/de_rouge"
                            android:focusable="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/de_6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_5"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"
                            android:text="@string/adresse" />

                        <TextView
                            android:id="@+id/edit_adresse"
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            tools:text="12" />

                        <ImageButton
                            android:id="@+id/de_adresse"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:contentDescription="@string/de_rouge"
                            android:focusable="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/de_6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/margin_5">

                        <TextView
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="60"
                            android:text="@string/fortune" />

                        <TextView
                            android:id="@+id/edit_fortune"
                            style="@style/text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="20"
                            tools:text="12" />

                        <ImageButton
                            android:id="@+id/de_fortune"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:contentDescription="@string/de_rouge"
                            android:focusable="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/de_6" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:text="@string/type"
                    tools:targetApi="m" />

                <ImageButton
                    android:id="@+id/type_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/type_button"
                    app:srcCompat="@drawable/ic_type" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorButton" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_aventurier"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:checked="true"
                    android:padding="@dimen/margin_10"
                    android:text="@string/aventurier_e"
                    android:textColor="@color/colorButton"
                    app:buttonTint="@color/colorButton" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_guerrier"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="35"
                    android:padding="@dimen/margin_10"
                    android:text="@string/guerrier_e"
                    android:textColor="@color/colorButton"
                    android:visibility="gone"
                    app:buttonTint="@color/colorButton" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_nain"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:padding="@dimen/margin_10"
                    android:text="@string/nain_e"
                    android:textColor="@color/colorButton"
                    android:visibility="gone"
                    app:buttonTint="@color/colorButton" />

            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBackground"
        android:layout_margin="@dimen/margin_5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="wrap_content"
            android:text="@string/commencer_l_aventure"
            style="@style/text"/>

        <ImageButton
            android:id="@+id/de_depart"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="@dimen/image_height_90"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/de_rouge"
            android:scaleType="centerInside"
            android:src="@drawable/de_20" />

    </LinearLayout>
</LinearLayout>