<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border_item"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_perso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_du_personnage" />

            <TextView
                android:id="@+id/type_item"
                style="@style/text_perso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Guerrier" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_item"
                style="@style/text_perso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="nom du personnage" />

            <TextView
                android:id="@+id/text_vie"
                style="@style/text_perso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/energie_vitale" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_delete"
            android:contentDescription="@string/delete_button" />

    </LinearLayout>
</LinearLayout>